# product-service/src/handlers/createProduct/index.ts
@@ -1,44 +1,49 @@
 import { APIGatewayProxyHandler } from 'aws-lambda';
 import { StatusCodes } from 'http-status-codes';
-import validator from 'validator';
 
 import getCors from '../../utils/getCors';
 import sendResponse from '../../utils/sendResponse';
 import { ERROR_MESSAGES } from '../../utils/getError';
-import { getById } from '../../services/productService';
+import { create } from '../../services/productService';
 
 export const handler: APIGatewayProxyHandler = async (event) => {
-  console.log('getProductsById was triggered with ', JSON.stringify(event));
+  console.log('createProduct was triggered with', JSON.stringify(event));
   const headers = getCors();
 
   try {
-    const { productId } = event.pathParameters;
+    const productData = event?.body && JSON.parse(event.body);
 
-    if (!validator.isUUID(productId)) {
+    if (!(productData
+      && productData.title
+      && productData.description
+      && productData.image
+      && productData.price
+      && productData.count
+    )) {
       return sendResponse(
         StatusCodes.BAD_REQUEST,
-        { message: ERROR_MESSAGES.PRODUCT_ID_NOT_VALID },
+        { message: ERROR_MESSAGES.PRODUCT_NOT_VALID },
         headers,
       );
     }
 
-    const product = await getById(productId);
+    const product = await create(productData);
 
     if (!product) {
       return sendResponse(
-        StatusCodes.NOT_FOUND,
-        { message: `${ERROR_MESSAGES.PRODUCT_NOT_FOUND}: ${productId}` },
+        StatusCodes.INTERNAL_SERVER_ERROR,
+        { message: ERROR_MESSAGES.PRODUCT_NOT_CREATED },
         headers,
       );
     }
 
     return sendResponse(
-      StatusCodes.OK,
+      StatusCodes.CREATED,
       product,
-      headers
+      headers,
     );
   } catch (error) {
-    console.log('Error execution for getting product by id', JSON.stringify(error));
+    console.log('Error execution for creating product ', JSON.stringify(error));
 
     return sendResponse(
       StatusCodes.INTERNAL_SERVER_ERROR,
